# homework_bot

./:  .env  README.md  exceptions.py  exeptions.py  homework.py  log.txt  logger_config.py  pyproject.toml
tests/: conftest.py  test_bot.py  utils.py
tests/fixtures/: fixture_data.py
