[tool.poetry]
name = "homework-bot"
version = "0.1.0"
description = ""
authors = ["AlexAvdeev1986 <116315897+AlexAvdeev1986@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "homework_bot"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
